# libspark

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
doc/: Doxygen.in  meson.build
include/: meson.build
include/spark/: block.h  iir_filter.h  libspark_api.h  meson.build  version.h.in
lib/: block.c  version.c
lib/iir-filter/: iir_sosfilt_f32.c
